stop icon wrapping on its own

--- a/src/components/external-link/_external-link.scss
+++ b/src/components/external-link/_external-link.scss
@@ -1,4 +1,7 @@
 .external-link {
+  &__icon {
+    white-space: nowrap;
+  }
   .svg-icon {
     fill: $color-grey-100;
     margin: 0 0 0 0.25rem;
